--- a/css/main/virtual-tour.css
+++ b/css/main/virtual-tour.css
@@ -25,7 +25,7 @@
 
 .visiting-cards a {
   max-width: 440px;
-  margin: 0 60px -1px 0;
+  margin: 0 60px 74px 0;
   color: #000;
 }
 
@@ -57,7 +57,7 @@
 }
 
 .visiting-cards .card figure hr {
-  max-width: 300px;
+  width: 300px;
   height: 2px;
   margin-left: 0;
   margin-bottom: 10px;
@@ -75,5 +75,11 @@
   line-height: 21px;
   margin: 0;
   letter-spacing: 0px;
+}
+
+.visiting-cards a:hover hr {
+  width: 100%;
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
 }
 /*# sourceMappingURL=virtual-tour.css.map */
