--- a/css/main/virtual-tour.scss
+++ b/css/main/virtual-tour.scss
@@ -18,7 +18,7 @@
 
   a{
     max-width: 440px;
-    margin: 0 60px -1px 0;
+    margin: 0 60px 74px 0;
     color: #000;
 
 
@@ -47,7 +47,7 @@
       }
 
       hr{
-        max-width: 300px;
+        width: 300px;
         height: 2px;
         margin-left: 0;
         margin-bottom: 10px;
@@ -65,6 +65,12 @@
         margin: 0;
         letter-spacing: 0px;
       }
+    }
+  }
+  a:hover{
+    hr{
+      width: 100%;
+      transition: 1s ease-in-out;
     }
   }
 }
