--- a/css/style.scss
+++ b/css/style.scss
@@ -40,5 +40,6 @@ a {
 @import "header/header.scss";
 @import "main/welcome.scss";
 @import "main/virtual-tour.scss";
+@import "main/picture-explore.scss";
 
 @import "footer/footer.scss"
