--- a/css/main/video-journey.scss
+++ b/css/main/video-journey.scss
@@ -25,7 +25,7 @@ margin-top: 75px;
   video{
     width: 100%;
     max-height: 735px;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
 
     &[poster]{
       width: 100%;
@@ -45,6 +45,9 @@ margin-top: 75px;
 
   .video-slidebar{
     display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 40px;
 
     .oneslide{
       width: 12px;
@@ -52,6 +55,26 @@ margin-top: 75px;
       background: #999999;
       border: 1px solid gray;
       border-radius: 50%;
+    }
+    .video-line{
+      display: block;
+      width: 10px;
+      mask-image: url("../../assets/svg/Vector\ \(Stroke\).svg");
+      background-color: #999999;
+
+      &:hover{
+        cursor: pointer;
+        background-color: #710707;
+      }
+    }
+    .video-line_right{
+      fill: #333;
+      transform: rotate(180deg);
+    }
+
+    .oneslide:hover{
+      cursor: pointer;
+      background-color: #710707;
     }
   }
 }
