feat: fulfilled gallery section

--- a/css/style.scss
+++ b/css/style.scss
@@ -41,5 +41,7 @@ a {
 @import "main/welcome.scss";
 @import "main/virtual-tour.scss";
 @import "main/picture-explore.scss";
+@import "main/video-journey.scss";
+@import "main/art-gallsery.scss";
 
 @import "footer/footer.scss"
