--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,253 @@ header {
   margin: 90px 0 75px 0;
 }
 
+.video {
+  margin-top: 75px;
+}
+
+.video .video-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #000;
+}
+
+.video .video-info h2 {
+  max-width: 605px;
+  color: #9D8665;
+  white-space: nowrap;
+  margin-top: 0;
+  margin-bottom: 75px;
+}
+
+.video .video-info h3 {
+  max-width: 720px;
+  margin-top: 0.53%;
+  line-height: 38px;
+  letter-spacing: 0px;
+}
+
+.video-player video {
+  width: 100%;
+  max-height: 735px;
+  margin-bottom: 35px;
+}
+
+.video-player video[poster] {
+  width: 100%;
+  height: 100%;
+}
+
+.video-player .video-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 42px;
+}
+
+.video-player .video-slider iframe {
+  max-width: 452px;
+  max-height: 254px;
+}
+
+.video-player .video-slidebar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.video-player .video-slidebar .oneslide {
+  width: 12px;
+  height: 12px;
+  background: #999999;
+  border: 1px solid gray;
+  border-radius: 50%;
+}
+
+.video-player .video-slidebar .video-line {
+  display: block;
+  width: 10px;
+  -webkit-mask-image: url("../../assets/svg/Vector (Stroke).svg");
+          mask-image: url("../../assets/svg/Vector (Stroke).svg");
+  background-color: #999999;
+}
+
+.video-player .video-slidebar .video-line:hover {
+  cursor: pointer;
+  background-color: #710707;
+}
+
+.video-player .video-slidebar .video-line_right {
+  fill: #333;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.video-player .video-slidebar .oneslide:hover {
+  cursor: pointer;
+  background-color: #710707;
+}
+
+.gallery {
+  margin-top: 75px;
+  overflow: hidden;
+}
+
+.galery-cont {
+  position: relative;
+  max-height: 2125px;
+}
+
+.galery-cont h2 {
+  margin-bottom: 75px;
+  margin-top: 75px;
+}
+
+.galery-cont .galery-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+  -webkit-box-shadow: inset 0px -350px 210px -210px #030303;
+          box-shadow: inset 0px -350px 210px -210px #030303;
+  z-index: 2;
+}
+
+.galery-cont .galery-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (456px)[3];
+      grid-template-columns: repeat(3, 456px);
+  -ms-grid-rows: (25px)[41];
+      grid-template-rows: repeat(41, 25px);
+  justify-items: stretch;
+  -webkit-column-gap: 36px;
+          column-gap: 36px;
+  row-gap: 24px;
+}
+
+.galery-cont .galery-grid .galery-picture {
+  display: block;
+}
+
+.galery-cont .galery-grid #galery-pic1, .galery-cont .galery-grid #galery-pic3 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 12;
+  grid-row: 2/14;
+  margin-top: 1px;
+}
+
+.galery-cont .galery-grid #galery-pic2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  grid-row: 0/10;
+}
+
+.galery-cont .galery-grid #galery-pic3 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+}
+
+.galery-cont .galery-grid #galery-pic4, .galery-cont .galery-grid #galery-pic6 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 14;
+  -ms-grid-row-span: 12;
+  grid-row: 14/26;
+  margin-top: 7px;
+}
+
+.galery-cont .galery-grid #galery-pic5 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 11;
+  -ms-grid-row-span: 12;
+  grid-row: 11/23;
+  margin-top: -10px;
+}
+
+.galery-cont .galery-grid #galery-pic6 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 14;
+  -ms-grid-row-span: 10;
+  grid-row: 14/24;
+}
+
+.galery-cont .galery-grid #galery-pic7 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 26;
+  -ms-grid-row-span: 9;
+  grid-row: 26/35;
+  margin-top: 13px;
+}
+
+.galery-cont .galery-grid #galery-pic8 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 23;
+  -ms-grid-row-span: 12;
+  grid-row: 23/35;
+  margin-top: -4px;
+}
+
+.galery-cont .galery-grid #galery-pic9 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 24;
+  -ms-grid-row-span: 10;
+  grid-row: 24/34;
+  margin-top: -3px;
+}
+
+.galery-cont .galery-grid #galery-pic10 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 36;
+  -ms-grid-row-span: 5;
+  grid-row: 36/41;
+  margin-top: 3px;
+}
+
+.galery-cont .galery-grid #galery-pic11 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 35;
+  -ms-grid-row-span: 6;
+  grid-row: 35/41;
+  margin-top: 1px;
+}
+
+.galery-cont .galery-grid #galery-pic12 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 34;
+  -ms-grid-row-span: 7;
+  grid-row: 34/41;
+  margin-top: -13px;
+}
+
 footer {
   height: 392px;
   background-color: #030303;
