--- a/css/style.scss
+++ b/css/style.scss
@@ -43,5 +43,7 @@ a {
 @import "main/picture-explore.scss";
 @import "main/video-journey.scss";
 @import "main/art-gallsery.scss";
+@import "main/tickets.scss";
+@import "main/contact.scss";
 
-@import "footer/footer.scss"
+@import "footer/footer.scss";
