--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -6,7 +6,8 @@ footer {
 footer hr {
   position: absolute;
   left: 0;
-  width: 100%;
+  width: 99.9%;
+  overflow: hidden;
 }
 
 footer ul {
@@ -63,6 +64,10 @@ footer .footer-container h2 {
   line-height: 26px;
 }
 
+.footer-navbar li a:hover {
+  color: #9d8665;
+}
+
 .footer-link ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -77,6 +82,10 @@ footer .footer-container h2 {
 .footer-link ul li {
   border: 2px solid #fff;
   border-radius: 50%;
+}
+
+.footer-link ul li:hover {
+  border: 2px solid #9d8665;
 }
 
 .footer-link ul li img {
@@ -101,5 +110,29 @@ footer .footer-container h2 {
   font-size: 22px;
   line-height: 22px;
   letter-spacing: 2px;
+}
+
+@media (max-width: 1024px) {
+  footer {
+    height: 368px;
+  }
+  footer .footer-container .footer-logo {
+    background-position: 0px 60px;
+  }
+  footer .footer-container h2 {
+    padding-top: 39px;
+    padding-bottom: 117px;
+  }
+  .footer-navbar {
+    top: 19%;
+    left: 20.1%;
+    max-width: 313px;
+  }
+  .footer-navbar ul:first-child {
+    margin-right: 31.5%;
+  }
+  .footer-link ul {
+    margin-top: 127px;
+  }
 }
 /*# sourceMappingURL=footer.css.map */
