--- a/css/footer/footer.scss
+++ b/css/footer/footer.scss
@@ -4,7 +4,8 @@ footer {
   hr {
     position: absolute;
     left: 0;
-    width: 100%;
+    width: 99.9%;
+    overflow: hidden;
   }
 
   ul {
@@ -49,6 +50,9 @@ footer {
       font-weight: 200;
       font-size: 22px;
       line-height: 26px;
+      &:hover {
+        color: #9d8665;
+      }
     }
   }
 }
@@ -61,6 +65,9 @@ footer {
   li {
     border: 2px solid #fff;
     border-radius: 50%;
+    &:hover {
+      border: 2px solid #9d8665;
+    }
 
     img {
       display: block;
@@ -78,5 +85,33 @@ footer {
     font-size: 22px;
     line-height: 22px;
     letter-spacing: 2px;
+  }
+}
+
+@media (max-width: 1024px) {
+  footer {
+    height: 368px;
+    .footer-container {
+      .footer-logo {
+        background-position: 0px 60px;
+      }
+
+      h2 {
+        padding-top: 39px;
+        padding-bottom: 117px;
+      }
+    }
+  }
+  .footer-navbar {
+    top: 19%;
+    left: 20.1%;
+    max-width: 313px;
+
+    & ul:first-child {
+      margin-right: 31.5%;
+    }
+  }
+  .footer-link ul {
+    margin-top: 127px;
   }
 }
