--- a/css/header/header.css
+++ b/css/header/header.css
@@ -16,8 +16,13 @@ header {
   min-height: 100%;
 }
 
+.header-container .burger {
+  display: none;
+}
+
 .header-logo {
-  background-image: url("../../assets/svg/logo.svg");
+  background-image: url("../assets/svg/logo.svg");
+  background-size: 49px 26px;
   background-repeat: no-repeat;
   background-position: 0px 18px;
   text-transform: uppercase;
@@ -55,6 +60,10 @@ header {
   color: #fff;
 }
 
+.header-navbar ul li a span {
+  display: none;
+}
+
 .header-navbar ul li a:hover {
   color: #9d8665;
 }
@@ -69,5 +78,67 @@ header {
 
 .header-navbar ul li:first-child a {
   padding-left: 0;
+}
+
+@media (max-width: 1024px) {
+  header {
+    height: 130px;
+  }
+  .header-container {
+    position: relative;
+  }
+  .header-container .burger {
+    display: block;
+    position: absolute;
+    right: 0;
+    width: 33px;
+    height: 18px;
+    -webkit-mask-image: url("../assets/svg/Group44.svg");
+            mask-image: url("../assets/svg/Group44.svg");
+    background-size: 33px 18px;
+    background-color: white;
+    background-repeat: no-repeat;
+  }
+  .header-container .burger:hover {
+    background-color: #9d8665;
+  }
+  .header-navbar {
+    position: absolute;
+    width: 122px;
+    top: 165px;
+    left: 35px;
+    display: none;
+  }
+  .header-navbar ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header-navbar ul li {
+    padding: 12.5px 0px;
+  }
+  .header-navbar ul li a {
+    width: 122px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 0;
+    font-weight: 300;
+    line-height: 23px;
+    white-space: nowrap;
+    font-size: 20px;
+  }
+  .header-navbar ul li a span {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+  }
 }
 /*# sourceMappingURL=header.css.map */
