--- a/css/header/header.scss
+++ b/css/header/header.scss
@@ -7,10 +7,15 @@ header {
   justify-content: space-between;
   align-items: center;
   min-height: 100%;
+
+  .burger {
+    display: none;
+  }
 }
 
 .header-logo {
-  background-image: url("../../assets/svg/logo.svg");
+  background-image: url("../assets/svg/logo.svg");
+  background-size: 49px 26px;
   background-repeat: no-repeat;
   background-position: 0px 18px;
   text-transform: uppercase;
@@ -40,6 +45,9 @@ header {
         text-transform: capitalize;
         text-decoration: none;
         color: #fff;
+        & span {
+          display: none;
+        }
 
         &:hover {
           color: #9d8665;
@@ -53,6 +61,61 @@ header {
       }
       &:first-child a {
         padding-left: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  header {
+    height: 130px;
+  }
+  .header-container {
+    position: relative;
+    .burger {
+      display: block;
+      position: absolute;
+      right: 0;
+      width: 33px;
+      height: 18px;
+      mask-image: url("../assets/svg/Group44.svg");
+      background-size: 33px 18px;
+      background-color: white;
+      background-repeat: no-repeat;
+
+      &:hover {
+        background-color: #9d8665;
+      }
+    }
+  }
+
+  .header-navbar {
+    position: absolute;
+    width: 122px;
+    top: 165px;
+    left: 35px;
+    display: none;
+    ul {
+      display: flex;
+      flex-direction: column;
+      li {
+        padding: 12.5px 0px;
+        a {
+          width: 122px;
+          display: flex;
+          justify-content: space-between;
+          padding: 0;
+          font-weight: 300;
+          line-height: 23px;
+          white-space: nowrap;
+          font-size: 20px;
+
+          & span {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+          }
+        }
       }
     }
   }
