--- a/css/main/art-gallsery.scss
+++ b/css/main/art-gallsery.scss
@@ -1,17 +1,17 @@
-.gallery{
+.gallery {
   margin-top: 75px;
   overflow: hidden;
 }
-.galery-cont{
+.galery-cont {
   position: relative;
   max-height: 2125px;
 
-  h2{
+  h2 {
     margin-bottom: 75px;
     margin-top: 75px;
   }
 
-  .galery-shadow{
+  .galery-shadow {
     position: absolute;
     top: 0;
     left: 0;
@@ -21,72 +21,46 @@
     z-index: 2;
   }
 
-  .galery-grid{
-    display: grid;
-    grid-template-columns: repeat(3, 456px);
-    grid-template-rows: repeat(41, 25px);
-    justify-items: stretch;
-    column-gap: 36px;
-    row-gap: 24px;
+  .galery-grid {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
-    .galery-picture{
-      display: block;
+    .galery-picture {
+      margin: 0 24px 36px 0;
+      min-height: 100%;
+      height: inherit;
+
+      &:nth-child(3n + 3) {
+        margin: 0 0px 36px 0;
+      }
+      &:nth-child(1) {
+        margin-top: 36px;
+      }
+      &:nth-child(3) {
+        margin-top: 36px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .gallery {
+    margin-top: 61px;
+  }
+  .galery-cont {
+    height: 1407px;
+
+    h2 {
+      margin-bottom: 52px;
+      margin-top: 52px;
     }
 
-    #galery-pic1, #galery-pic3{
-      grid-row: 2/14;
-      margin-top: 1px;
-    }
-    #galery-pic2{
-      grid-column: 2/3;
-      grid-row: 0/10;
-    }
-    #galery-pic3{
-      grid-column: 3/4;
-    }
-    #galery-pic4, #galery-pic6{
-      grid-column: 1/2;
-      grid-row: 14/26;
-      margin-top: 7px;
-    }
-    #galery-pic5{
-      grid-column: 2/3;
-      grid-row: 11/23;
-      margin-top: -10px;
-    }
-    #galery-pic6{
-      grid-column: 3/4;
-      grid-row: 14/24;
-    }
-    #galery-pic7{
-      grid-column: 1/2;
-      grid-row: 26/35;
-      margin-top: 13px;
-    }
-    #galery-pic8{
-      grid-column: 2/3;
-      grid-row: 23/35;
-      margin-top: -4px;
-    }
-    #galery-pic9{
-      grid-column: 3/4;
-      grid-row: 24/34;
-      margin-top: -3px;
-    }
-    #galery-pic10{
-      grid-column: 1/2;
-      grid-row: 36/41;
-      margin-top: 3px;
-    }
-    #galery-pic11{
-      grid-column: 2/3;
-      grid-row: 35/41;
-      margin-top: 1px;
-    }
-    #galery-pic12{
-      grid-column: 3/4;
-      grid-row: 34/41;
-      margin-top: -13px;
+    .galery-grid {
+      .galery-picture {
+        margin: 0 36px 24px 0;
+        max-width: 304px;
+      }
     }
   }
 }
