--- a/css/main/contact.css
+++ b/css/main/contact.css
@@ -37,4 +37,44 @@
   line-height: 26px;
   letter-spacing: 0;
 }
+
+.contacts .contact-info .info p a {
+  color: black;
+}
+
+.contacts .contact-info .info p a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .contacts {
+    margin-bottom: 67px;
+  }
+  .contacts h2 {
+    padding-bottom: 12px;
+  }
+  .contacts .contact-info {
+    margin-top: 60px;
+  }
+  .contacts .contact-info .info h3 {
+    margin-bottom: 35px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .contacts .contact-info .info p {
+    margin-bottom: -5px;
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .contacts .contact-info .info p a {
+    font-size: 20px;
+    letter-spacing: 0;
+  }
+  .contacts .contact-info img {
+    max-width: 694px;
+    max-height: 454px;
+  }
+}
 /*# sourceMappingURL=contact.css.map */
