--- a/css/main/contact.scss
+++ b/css/main/contact.scss
@@ -28,6 +28,47 @@
         font-size: 22px;
         line-height: 26px;
         letter-spacing: 0;
+        a {
+          color: black;
+          &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .contacts {
+    margin-bottom: 67px;
+    h2 {
+      padding-bottom: 12px;
+    }
+    .contact-info {
+      margin-top: 60px;
+
+      .info {
+        h3 {
+          margin-bottom: 35px;
+          font-weight: bold;
+          font-size: 24px;
+          line-height: 28px;
+        }
+        p {
+          margin-bottom: -5px;
+          font-size: 20px;
+          line-height: 23px;
+          a {
+            font-size: 20px;
+            letter-spacing: 0;
+          }
+        }
+      }
+      img {
+        max-width: 694px;
+        max-height: 454px;
       }
     }
   }
