--- a/css/main/picture-explore.scss
+++ b/css/main/picture-explore.scss
@@ -1,34 +1,76 @@
-.explore{
+.explore {
   max-height: 865px;
 }
-.explore-cont{
+.explore-cont {
   display: flex;
   justify-content: space-between;
 }
-.explore-info{
+.explore-info {
   max-width: 659px;
 
-  h2{
+  h2 {
     margin-top: 75px;
     margin-bottom: 75px;
     padding-bottom: 25px;
     border-bottom: 3px solid #710707;
   }
-  p{
+  p {
     margin-bottom: 27px;
     font-weight: 300;
     font-size: 22px;
     line-height: 38px;
     letter-spacing: 0px;
 
-    span{
-      color: #CAAA7D;
+    span {
+      color: #caaa7d;
       letter-spacing: 0;
     }
   }
-
 }
-.explore-picture{
+.explore-picture {
   max-width: 720px;
   margin: 90px 0 75px 0;
+}
+
+@media (max-width: 1024px) {
+  .explore {
+    max-height: 1149px;
+  }
+  .explore-cont {
+    display: block;
+  }
+  .explore-info {
+    max-width: 100%;
+
+    h2 {
+      margin-top: 0px;
+      margin-bottom: 60px;
+      padding-top: 53px;
+      padding-bottom: 12px;
+    }
+    p {
+      margin: 0px;
+      font-size: 20px;
+
+      span {
+        color: #caaa7d;
+        letter-spacing: -0.8px;
+      }
+    }
+    .hide1024 {
+      display: none;
+    }
+    .adapt1024 {
+      line-height: 35px;
+    }
+  }
+  .explore-picture {
+    max-width: 720px;
+    margin: 62px auto 0;
+    padding-bottom: 62px;
+    img {
+      display: block;
+      margin: 0;
+    }
+  }
 }
