--- a/css/main/video-journey.css
+++ b/css/main/video-journey.css
@@ -14,7 +14,7 @@
 
 .video .video-info h2 {
   max-width: 605px;
-  color: #9D8665;
+  color: #9d8665;
   white-space: nowrap;
   margin-top: 0;
   margin-bottom: 75px;
@@ -72,8 +72,8 @@
 .video-player .video-slidebar .video-line {
   display: block;
   width: 10px;
-  -webkit-mask-image: url("../../assets/svg/Vector (Stroke).svg");
-          mask-image: url("../../assets/svg/Vector (Stroke).svg");
+  -webkit-mask-image: url("../assets/svg/Vector (Stroke).svg");
+          mask-image: url("../assets/svg/Vector (Stroke).svg");
   background-color: #999999;
 }
 
@@ -91,5 +91,37 @@
 .video-player .video-slidebar .oneslide:hover {
   cursor: pointer;
   background-color: #710707;
+}
+
+@media (max-width: 1024px) {
+  .video {
+    margin-top: 53px;
+  }
+  .video .video-info h2 {
+    margin-bottom: 32px;
+  }
+  .video .video-info h3 {
+    display: none;
+  }
+  .video-player video {
+    width: 100%;
+    max-height: 504px;
+    margin-bottom: 35px;
+  }
+  .video-player video[poster] {
+    width: 100%;
+    height: 504px;
+  }
+  .video-player .video-slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 41px;
+  }
+  .video-player .video-slider iframe {
+    max-width: 300px;
+    max-height: 170px;
+    border: none;
+  }
 }
 /*# sourceMappingURL=video-journey.css.map */
