--- a/css/main/video-journey.scss
+++ b/css/main/video-journey.scss
@@ -1,17 +1,17 @@
-.video{
-margin-top: 75px;
-  .video-info{
+.video {
+  margin-top: 75px;
+  .video-info {
     display: flex;
     justify-content: space-between;
     color: #000;
-    h2{
+    h2 {
       max-width: 605px;
-      color: #9D8665;
+      color: #9d8665;
       white-space: nowrap;
       margin-top: 0;
       margin-bottom: 75px;
     }
-    h3{
+    h3 {
       max-width: 720px;
       margin-top: 0.53%;
       line-height: 38px;
@@ -20,61 +20,98 @@ margin-top: 75px;
   }
 }
 
-.video-player{
-
-  video{
+.video-player {
+  video {
     width: 100%;
     max-height: 735px;
     margin-bottom: 35px;
 
-    &[poster]{
+    &[poster] {
       width: 100%;
       height: 100%;
     }
   }
 
-  .video-slider{
+  .video-slider {
     display: flex;
     gap: 42px;
 
-    iframe{
+    iframe {
       max-width: 452px;
       max-height: 254px;
     }
   }
 
-  .video-slidebar{
+  .video-slidebar {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-top: 40px;
 
-    .oneslide{
+    .oneslide {
       width: 12px;
       height: 12px;
       background: #999999;
       border: 1px solid gray;
       border-radius: 50%;
     }
-    .video-line{
+    .video-line {
       display: block;
       width: 10px;
-      mask-image: url("../../assets/svg/Vector\ \(Stroke\).svg");
+      mask-image: url("../assets/svg/Vector\ \(Stroke\).svg");
       background-color: #999999;
 
-      &:hover{
+      &:hover {
         cursor: pointer;
         background-color: #710707;
       }
     }
-    .video-line_right{
+    .video-line_right {
       fill: #333;
       transform: rotate(180deg);
     }
 
-    .oneslide:hover{
+    .oneslide:hover {
       cursor: pointer;
       background-color: #710707;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .video {
+    margin-top: 53px;
+    .video-info {
+      h2 {
+        margin-bottom: 32px;
+      }
+      h3 {
+        display: none;
+      }
+    }
+  }
+
+  .video-player {
+    video {
+      width: 100%;
+      max-height: 504px;
+      margin-bottom: 35px;
+
+      &[poster] {
+        width: 100%;
+        height: 504px;
+      }
+    }
+
+    .video-slider {
+      display: flex;
+      gap: 41px;
+
+      iframe {
+        max-width: 300px;
+        max-height: 170px;
+        border: none;
+      }
     }
   }
 }
