--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,7 @@ body {
 header,
 main,
 footer {
+  margin: 0 auto;
   max-width: 1920px;
 }
 .container {
@@ -35,6 +36,23 @@ h2 {
 a {
   text-decoration: none;
   color: #fff;
+}
+
+@media (max-width: 1024px) {
+  h2 {
+    font-size: 50px;
+  }
+  header,
+  main,
+  footer {
+    max-width: 1024px;
+  }
+  .container {
+    max-width: 984px;
+  }
+  .hide1024 {
+    display: none;
+  }
 }
 
 @import "header/header.scss";
